# SimToReal-RoboticArm

./: .gitignore  README.md  collection_plan.md  collection_plan_zh.md  pyproject.toml
configs/: base.yaml  baselines.yaml  continuous_act_template.yaml  continuous_control_template.yaml  continuous_diffusion_template.yaml  continuous_smolvla_template.yaml  deployment.yaml  deployment_l3.yaml  direct_sim.yaml  fixed_protocol.yaml  fixed_protocol_compact.yaml  fixed_protocol_task_mask.yaml  language_push.yaml  plain_sim_protocol.yaml  pseudo_real_actuation.yaml  pseudo_real_actuation_compact.yaml  pseudo_real_appearance.yaml  pseudo_real_camera.yaml  pseudo_real_camera_compact.yaml  pseudo_real_camera_hybrid.yaml  pseudo_real_combined.yaml  pseudo_real_combined_compact.yaml  pseudo_real_combined_hybrid.yaml  pseudo_real_embodiment.yaml  pseudo_real_embodiment_adapterplus.yaml  pseudo_real_embodiment_hybrid.yaml  pseudo_real_embodiment_opt.yaml  pseudo_real_embodiment_warmstart.yaml  pseudo_real_hard.yaml  pseudo_real_joint.yaml  pseudo_real_joint_adapterplus.yaml  pseudo_real_joint_opt.yaml  pseudo_real_mild.yaml  pseudo_real_visual.yaml  pseudo_real_visual_compact.yaml  pseudo_real_visual_hybrid.yaml  real_collection_plan_v2.yaml  real_eval_shiftgrid_a8g05_ff.yaml  stronger_dr_protocol.yaml
docs/: continuous_control_refactor_plan.md  real_collection_operator_checklist.md  real_collection_plan_v2.md
scripts/: audit_continuous_expert.py  build_ablation_table.py  build_adopted_pseudoreal_tables.py  calibrate_adapter.py  collect_real_calibration.py  collect_real_l3_success.py  collect_real_transition_session.py  compare_source_protocols.py  demo_continuous_teacher.py  demo_sim_primitives.py  demo_sim_task_flows.py  deploy_roarm.py  evaluate_continuous_backbone.py  evaluate_continuous_val_loss.py  generate_sim_data.py  (+43 more)
(+50 files in other folders)
